<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        tools:visibility="gone"/>

    <TextView
        android:id="@+id/errorTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/space_normal"
        android:layout_margin="@dimen/space_normal"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_normal"
        android:visibility="gone"
        tools:text="Something went wrong" />

    <LinearLayout
        android:id="@+id/fragmentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_normal"
            tools:text="November 15, 2022" />

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_normal"
            android:textStyle="italic"
            tools:text="Go ahead and do something outrageous -- just be creative about it. You don't have to go into debt to have a rich experience if you put your mind to it." />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/compability"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/compabilityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_normal"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_normal"
                tools:text="Tarus" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mood"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/moodTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_normal"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_normal"
                tools:text="Crazy" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/colorTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_normal"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_normal"
                tools:text="Red" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lucky_number"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/luckyNumberTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_normal"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_normal"
                tools:text="99" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lucky_time"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/luckyTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_normal"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_normal"
                tools:text="3pm" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>